--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="container">
       <h1 id="our-headline">Click a List Item to Replace This Text</h1>
       <br>
-      <button>Add New Item</button>
+      <button id="our-button">Add New Item</button>
       <br>
       <br>
-      <ul class="list-group list-group-flush">
+      <ul id="our-list" class="list-group list-group-flush">
         <li class="list-group-item">First Item</li>
         <li class="list-group-item">Second Item</li>
         <li class="list-group-item">Third Item</li>
